# plomo

./: .env.example  .gitignore  CLAUDE.md  README.md  available_ids.json  muzpa_api_calls.json  muzpa_batch.json  muzpa_batch_50.json  muzpa_batch_set3h.txt  pyproject.toml  requirements.txt  setlists_muzpa.json  sunset_trip_muzpa.json
data/: transition_feedback.json
docs/: ARCHITECTURE.md  ENERGY_ALGORITHM.md  MI_SONIDO.md  REGLAS.md  SETUP.md  vscode_launch_template.json
scripts/: analyze_set.py  apply_energy_v2.py  build_set_v2.py  build_setlist_sets.py  cumple_del_20.py  dedup_and_cue.py  fix_folderpath.py  fix_paths.py  fix_set_cumple20.py  import_all.py  muzpa_download.py  post_import.py  postproduce.py  rebuild_all_sets.py  remove_orphan_nuevos.py  reorder_sets_energy.py  reorganize_sets.py  test_energy_v2.py  watcher.py
scripts/archive/: copy_anlz_to_pen.py  fix_anlz_paths.py  fix_backslash_paths.py  fix_export_errors.py  fix_sonoma_loop.py  muzpa_api.py  muzpa_inspect.py  muzpa_intercept.py  process_downloads.py  remove_exact_dupes.py
src/plomo/: __init__.py  camelot.py  cli.py  config.py  cue_engine.py  energy.py  energy_v2.py  rekordbox_db.py  set_builder.py
tests/: test_camelot.py
